# tg_notification_bot

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
tests/: conftest.py  test_group_chat_bot.py  test_notification_bot.py
tg_notification_bot/: __init__.py  bot.py  exceptions.py  main.py  models.py
